--- a/StankinsTests/Views/hierarFolder.cshtml
+++ b/StankinsTests/Views/hierarFolder.cshtml
@@ -34,7 +34,9 @@ Number Rows: @Model.Length
 <td>@m.ID</td>
 @foreach(var col in FieldNames){
 <td>
-@item.Values[col]
+    @if (item.Values.ContainsKey(col)){ 
+        <text>@item.Values[col]</text>
+    }
 </td>
 }
 <td>
