--- a/StankinsDemos/Views/blockly.cshtml
+++ b/StankinsDemos/Views/blockly.cshtml
@@ -37,8 +37,8 @@ Number Rows: @Model.Length
     }
 
     string fields = "";
-    string codeReturn = "{";
-    string codeGenerator = "Blockly.JavaScript['" + item.Values["Name"]+"'] = function(block) {<br />{";
+    string codeReturn = "var code ='{';<br />";
+    string codeGenerator = "Blockly.JavaScript['" + item.Values["Name"]+"'] = function(block) {<br />";
         var props = rel.Relations["Properties"];
         foreach (var prop in props)
         {
@@ -52,16 +52,15 @@ Number Rows: @Model.Length
   var value_{0} = Blockly.JavaScript.valueToCode(block, 'val{0}', Blockly.JavaScript.ORDER_ATOMIC);<br />
 var realValue_{0} =value_{0} || text_{0};<br />
   ", prop.Values["Name"]);
-            codeReturn += string.Format("{0}:realValue_{0},<br />", prop.Values["Name"]);
+            codeReturn += string.Format("code+=\"{0}:\"+ realValue_{0}+\",\"<br />;", prop.Values["Name"]);
         }
 
         codeGenerator +=string.Format
         (@"
-  <br />var code = {0} }};<br />
-code=JSON.stringify(code);//not good for variables <br />
-code +='\n';<br />
+  <br />{0} ;<br />
+code +='}}\n';<br />
   return code;<br />
-<br />}};<br />}};", codeReturn);
+<br />}};<br />;", codeReturn);
 
 <tr>
 <td valign="top">
