--- a/StankinsDemos/Views/blockly.cshtml
+++ b/StankinsDemos/Views/blockly.cshtml
@@ -49,14 +49,18 @@ Number Rows: @Model.Length
         codeGenerator += string.Format(@"<br />
   var text_{0} = block.getFieldValue('fld{0}');<br />
   var value_{0} = Blockly.JavaScript.valueToCode(block, 'val{0}', Blockly.JavaScript.ORDER_ATOMIC);<br />
-var realValue_{0} =value_{0} || text_{0};<br />
-  ", prop.Values["Name"]);
+var realValue_{0} =value_{0} || {1} + text_{0} + {1};<br />
+  ", prop.Values["Name"], "\"'\"");
         codeReturn +=@"
         "+ string.Format("<br />code+=\"{0}:\"+ realValue_{0}+\",\"<br />;", prop.Values["Name"]);
     }
     fields += @"
     <br />;this.setPreviousStatement(true, null);
     <br />this.setNextStatement(true, null); ";
+    codeReturn +=string.Format(@"
+"+
+    "code+=\"$type: '{0}, {1}'\";",
+    rel.Values["FullName"], rel.Values["AssemblyName"]);
     codeGenerator +=string.Format
     (@"
   <br />{0} ;<br />
