--- a/HtmlGenerator/Pages/_Layout.cshtml
+++ b/HtmlGenerator/Pages/_Layout.cshtml
@@ -44,7 +44,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - HtmlGenerator</p>
+            <p>&copy; 2017 - BlocklyHtmlGenerator</p>
         </footer>
     </div>
 
