packing html generator

--- a/HtmlGenerator/Pages/Index.cshtml
+++ b/HtmlGenerator/Pages/Index.cshtml
@@ -421,4 +421,9 @@
 
 @section Scripts{
     <script src="~/js/blocklyGenerator.js"></script>
+    <script>
+        $(document).ready(function () {
+            loadFromCookie();
+        });
+    </script>
 }
