--- a/HtmlGenerator/Pages/Index.cshtml
+++ b/HtmlGenerator/Pages/Index.cshtml
@@ -405,6 +405,39 @@
 
         </xml>
 
+       
+            @if (Model?.Result != null)
+            {
+                <table border="1">
+                    <thead>
+                        <tr>
+                            @foreach (DataColumn col in Model.Result.Columns)
+                            {
+                                <th>@col.ColumnName</th>
+
+                            }
+
+                        </tr>
+
+
+                    </thead>
+                    <tbody>
+                        @foreach (DataRow item in Model.Result.Rows)
+                {
+                            <tr>
+                                @foreach (var data in item.ItemArray)
+                                {
+                                    <td>@data</td>
+
+                                }
+                            </tr>
+
+                        }
+                    </tbody>
+                </table>
+            }
+        
+
     </div>
     
     <div class="col-md-2">
@@ -418,48 +451,9 @@
         </form>
     </div>
 </div>
-<div class="row">
-    <div class="col-md-12">
-        <p class="text-center">
-            <h1 id="theTitle">Result</h1>
-        </p>
-    </div>
-</div>
 
-<div class="row">
-    <div class="col-md-12">
-        @if (Model?.Result != null)
-        {
-        <table>
-            <thead>
-                <tr>
-                    @foreach (DataColumn col in Model.Result.Columns)
-                    {
-                        <th>@col.ColumnName</th>
 
-                    }
 
-                </tr>
-
-                
-            </thead>
-            <tbody>
-                @foreach (DataRow item in Model.Result.Rows)
-                {
-                    <tr>
-                        @foreach(var data in item.ItemArray)
-                        {
-                            <td>@data</td>
-
-                        }
-                    </tr>
-
-                }
-            </tbody>
-        </table>
-        }
-    </div>
-</div>
 
 @section Scripts{
     <script src="~/js/blocklyGenerator.js"></script>
