--- a/HtmlGenerator/Pages/_Layout.cshtml
+++ b/HtmlGenerator/Pages/_Layout.cshtml
@@ -76,6 +76,9 @@
         <script src='~/js/stankinsblocks/TransformerFieldStringInt_block.js'></script>
         <script src='~/js/stankinsblocks/TransformerFieldStringInt_code.js'></script>
 
+        <script src='~/js/stankinsblocks/ReceiverHTMLTable_block.js'></script>
+        <script src='~/js/stankinsblocks/ReceiverHTMLTable_code.js'></script>
+        
 
        
         <script src="~/js/hopscotch/js/hopscotch.min.js"></script>  
