l;oad file signatures wikipedia

--- a/HtmlGenerator/Pages/Index.cshtml
+++ b/HtmlGenerator/Pages/Index.cshtml
@@ -66,7 +66,7 @@
 
             </category>
             <category name='filters'>
-               
+                <block type='FilterExistValue'></block>
             </category>
             <category name='senders'>
                 <block type='Sender_CSV'></block>
