--- a/HtmlGenerator/Pages/_Layout.cshtml
+++ b/HtmlGenerator/Pages/_Layout.cshtml
@@ -79,6 +79,8 @@
         <script src='~/js/stankinsblocks/ReceiverHTMLTable_block.js'></script>
         <script src='~/js/stankinsblocks/ReceiverHTMLTable_code.js'></script>
         
+        <script src='~/js/stankinsblocks/FilterExistValue_block.js'></script>
+        <script src='~/js/stankinsblocks/FilterExistValue_code.js'></script>
 
        
         <script src="~/js/hopscotch/js/hopscotch.min.js"></script>  
