added filter comparable

--- a/HtmlGenerator/Pages/_Layout.cshtml
+++ b/HtmlGenerator/Pages/_Layout.cshtml
@@ -81,8 +81,10 @@
         
         <script src='~/js/stankinsblocks/FilterExistValue_block.js'></script>
         <script src='~/js/stankinsblocks/FilterExistValue_code.js'></script>
+        
+        <script src='~/js/stankinsblocks/FilterComparable_block.js'></script>
+        <script src='~/js/stankinsblocks/FilterComparable_code.js'></script>
 
-       
         <script src="~/js/hopscotch/js/hopscotch.min.js"></script>  
         <script src="~/js/demo.js"></script>  
     </environment>
