--- a/HtmlGenerator/Pages/Index.cshtml
+++ b/HtmlGenerator/Pages/Index.cshtml
@@ -67,6 +67,7 @@
             </category>
             <category name='filters'>
                 <block type='FilterExistValue'></block>
+                <block type='FilterRemainItemsForValue'></block>
             </category>
             <category name='senders'>
                 <block type='Sender_CSV'></block>
