--- a/HtmlGenerator/Pages/_Layout.cshtml
+++ b/HtmlGenerator/Pages/_Layout.cshtml
@@ -82,8 +82,13 @@
         <script src='~/js/stankinsblocks/FilterExistValue_block.js'></script>
         <script src='~/js/stankinsblocks/FilterExistValue_code.js'></script>
         
-        <script src='~/js/stankinsblocks/FilterComparable_block.js'></script>
+        <script src='~/js/stankinsblocks/FilterRemainItemsForValue_block.js'></script>
+        <script src='~/js/stankinsblocks/FilterRemainItemsForValue_code.js'></script>
+
+
+        @*<script src='~/js/stankinsblocks/FilterComparable_block.js'></script>
         <script src='~/js/stankinsblocks/FilterComparable_code.js'></script>
+            *@
 
         <script src="~/js/hopscotch/js/hopscotch.min.js"></script>  
         <script src="~/js/demo.js"></script>  
