--- a/HtmlGenerator/Pages/Index.cshtml
+++ b/HtmlGenerator/Pages/Index.cshtml
@@ -63,7 +63,7 @@
 
                 <block type='TransformerFieldStringToDate'></block>
                 <block type='TransformerFieldStringInt'></block>
-
+                <block type='TransformRowRemoveField'></block>
             </category>
             <category name='filters'>
                 <block type='FilterExistValue'></block>
