--- a/HtmlGenerator/Pages/_Layout.cshtml
+++ b/HtmlGenerator/Pages/_Layout.cshtml
@@ -80,6 +80,9 @@
         <script src='~/js/stankinsblocks/FilterRemainItemsForValue_block.js'></script>
         <script src='~/js/stankinsblocks/FilterRemainItemsForValue_code.js'></script>
 
+    <script src='~/js/stankinsblocks/TransformRowRemoveField_block.js'></script>
+    <script src='~/js/stankinsblocks/TransformRowRemoveField_code.js'></script>
+
 
         @*<script src='~/js/stankinsblocks/FilterComparable_block.js'></script>
         <script src='~/js/stankinsblocks/FilterComparable_code.js'></script>
