added transform to key value

--- a/HtmlGenerator/Pages/Index.cshtml
+++ b/HtmlGenerator/Pages/Index.cshtml
@@ -67,6 +67,7 @@
                 <block type='TransformerFieldStringToDate'></block>
                 <block type='TransformerFieldStringInt'></block>
                 <block type='TransformRowRemoveField'></block>
+                <block type='TransformKeyValue'></block>
             </category>
             <category name='filters'>
                 <block type='FilterExistValue'></block>
