--- a/HtmlGenerator/Pages/_Layout.cshtml
+++ b/HtmlGenerator/Pages/_Layout.cshtml
@@ -83,6 +83,9 @@
     <script src='~/js/stankinsblocks/TransformRowRemoveField_block.js'></script>
     <script src='~/js/stankinsblocks/TransformRowRemoveField_code.js'></script>
 
+    <script src='~/js/stankinsblocks/TransformKeyValue_block.js'></script>
+    <script src='~/js/stankinsblocks/TransformKeyValue_code.js'></script>
+
 
         @*<script src='~/js/stankinsblocks/FilterComparable_block.js'></script>
         <script src='~/js/stankinsblocks/FilterComparable_code.js'></script>
