--- a/HtmlGenerator/Pages/_Layout.cshtml
+++ b/HtmlGenerator/Pages/_Layout.cshtml
@@ -85,7 +85,9 @@
 
     <script src='~/js/stankinsblocks/TransformKeyValue_block.js'></script>
     <script src='~/js/stankinsblocks/TransformKeyValue_code.js'></script>
-
+    
+    <script src='~/js/stankinsblocks/TransformAddNewField_block.js'></script>
+    <script src='~/js/stankinsblocks/TransformAddNewField_code.js'></script>
 
         @*<script src='~/js/stankinsblocks/FilterComparable_block.js'></script>
         <script src='~/js/stankinsblocks/FilterComparable_code.js'></script>
