--- a/HtmlGenerator/Pages/_Layout.cshtml
+++ b/HtmlGenerator/Pages/_Layout.cshtml
@@ -74,6 +74,9 @@
         <script src='~/js/stankinsblocks/ReceiverHTMLTable_block.js'></script>
         <script src='~/js/stankinsblocks/ReceiverHTMLTable_code.js'></script>
         
+    <script src='~/js/stankinsblocks/ReceiverCSVWholeFile_block.js'></script>
+    <script src='~/js/stankinsblocks/ReceiverCSVWholeFile_code.js'></script>
+
         <script src='~/js/stankinsblocks/FilterExistValue_block.js'></script>
         <script src='~/js/stankinsblocks/FilterExistValue_code.js'></script>
         
