added receiver html xpath

--- a/HtmlGenerator/Pages/Index.cshtml
+++ b/HtmlGenerator/Pages/Index.cshtml
@@ -68,6 +68,8 @@
                 <block type='ReceiverWholeTable'></block>
                 <block type='ReceiverHTMLTable'></block>
                 <block type='ReceiverCSVWholeFile'></block>
+                <block type='ReceiverHTMLXPath'></block>
+                
             </category>
             <category name='transformers'>
                 <block type='TransformRowMergeFields'></block>
