--- a/HtmlGenerator/Pages/_Layout.cshtml
+++ b/HtmlGenerator/Pages/_Layout.cshtml
@@ -92,6 +92,9 @@
     <script src='~/js/stankinsblocks/TransformAddNewField_block.js'></script>
     <script src='~/js/stankinsblocks/TransformAddNewField_code.js'></script>
 
+    <script src='~/js/stankinsblocks/ReceiverHTMLXPath_block.js'></script>
+    <script src='~/js/stankinsblocks/ReceiverHTMLXPath_code.js'></script>
+
         @*<script src='~/js/stankinsblocks/FilterComparable_block.js'></script>
         <script src='~/js/stankinsblocks/FilterComparable_code.js'></script>
             *@
