--- a/HtmlGenerator/Pages/Index.cshtml
+++ b/HtmlGenerator/Pages/Index.cshtml
@@ -79,6 +79,7 @@
                 <block type='TransformRowRemoveField'></block>
                 <block type='TransformKeyValue'></block>
                 <block type='TransformAddNewField'></block>
+                <block type='TransformRowRegex'></block>
             </category>
             <category name='filters'>
                 <block type='FilterExistValue'></block>
