--- a/HtmlGenerator/Pages/_Layout.cshtml
+++ b/HtmlGenerator/Pages/_Layout.cshtml
@@ -95,6 +95,10 @@
     <script src='~/js/stankinsblocks/ReceiverHTMLXPath_block.js'></script>
     <script src='~/js/stankinsblocks/ReceiverHTMLXPath_code.js'></script>
 
+    <script src='~/js/stankinsblocks/TransformRowRegex_block.js'></script>
+    <script src='~/js/stankinsblocks/TransformRowRegex_code.js'></script>
+
+    
         @*<script src='~/js/stankinsblocks/FilterComparable_block.js'></script>
         <script src='~/js/stankinsblocks/FilterComparable_code.js'></script>
             *@
