added modify field

--- a/HtmlGenerator/Pages/Index.cshtml
+++ b/HtmlGenerator/Pages/Index.cshtml
@@ -79,7 +79,9 @@
                 <block type='TransformRowRemoveField'></block>
                 <block type='TransformKeyValue'></block>
                 <block type='TransformAddNewField'></block>
+                <block type='TransformModifyField'></block>
                 <block type='TransformRowRegex'></block>
+                
             </category>
             <category name='filters'>
                 <block type='FilterExistValue'></block>
