--- a/HtmlGenerator/Pages/_Layout.cshtml
+++ b/HtmlGenerator/Pages/_Layout.cshtml
@@ -98,7 +98,9 @@
     <script src='~/js/stankinsblocks/TransformRowRegex_block.js'></script>
     <script src='~/js/stankinsblocks/TransformRowRegex_code.js'></script>
 
-    
+    <script src='~/js/stankinsblocks/TransformModifyField_block.js'></script>
+    <script src='~/js/stankinsblocks/TransformModifyField_code.js'></script>
+
         @*<script src='~/js/stankinsblocks/FilterComparable_block.js'></script>
         <script src='~/js/stankinsblocks/FilterComparable_code.js'></script>
             *@
