adding best beer

--- a/HtmlGenerator/Pages/Index.cshtml
+++ b/HtmlGenerator/Pages/Index.cshtml
@@ -41,6 +41,9 @@
             <button id="recipeLoadPhoneProducers" class="btn btn-large btn-primary" onclick="javascript:loadData('phoneProducers')">
                 Phone Producers
             </button>
+            <button id="recipeBestBeer" class="btn btn-large btn-primary" onclick="javascript:loadData('bestBeer')">
+               Best beer
+            </button>
             
 </p>
     </div>
@@ -464,6 +467,7 @@
 @Html.Raw(System.IO.File.ReadAllText("recipesXML/gsmArenaSamsungG8.txt"));
 @Html.Raw(System.IO.File.ReadAllText("recipesXML/androidList.txt"));
 @Html.Raw(System.IO.File.ReadAllText("recipesXML/phoneProducers.txt"));
+@Html.Raw(System.IO.File.ReadAllText("recipesXML/bestBeer.txt"));
 
 @section Scripts{
     <script src="~/js/blocklyGenerator.js"></script>
